--- a/package.json
+++ b/package.json
@@ -25,10 +25,12 @@
     "graphql": "^16.8.1",
     "jsonwebtoken": "^9.0.2",
     "lucide-react": "^0.378.0",
-    "next": "14.2.3",
+    "next": "^14.2.22",
     "react": "^18",
     "react-dom": "^18",
-    "urql": "^4.0.7"
+    "urql": "^4.0.7",
+    "webpack": "^5.97.1",
+    "webpack-cli": "^6.0.1"
   },
   "devDependencies": {
     "@types/bcrypt": "^5.0.2",
